--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="#"><img src="/img/pngwing.com.png" alt="img" width="160"></a>
+        <a href="#"><img src="img/pngwing.com.png" alt="img" width="160"></a>
         <p><a href="#">PERSONAL <i class="fas fa-caret-down"></i></a></p>
         <div class="main-btns">
             <button>Login</button>
@@ -25,7 +25,7 @@
     <section class="sec-1">
         <h1>PayPal is for everyone who pays online.</h1>
         <div class="sec-1-inner">
-            <img width="120" src="/img/pngwing.com.png" alt="img">
+            <img width="120" src="img/pngwing.com.png" alt="img">
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <button>Learn More</button>
         </div>
